[gd_scene format=3 uid="uid://cerk3y8j1h1do"]

[ext_resource type="Script" uid="uid://c6av3xe4m2ujl" path="res://addons/madtalk/runtime/madtalk_runtime.gd" id="1_qttj8"]
[ext_resource type="FontFile" uid="uid://ip8tcqh7uxmx" path="res://fonts/Alkhemikal.ttf" id="3_6sbyu"]
[ext_resource type="Texture2D" uid="uid://dmj1j5r0psdlj" path="res://example_scene/images/francesco.png" id="4_n4gff"]
[ext_resource type="PackedScene" uid="uid://4ggo1b35btnu" path="res://scenes/player/hud.tscn" id="5_svxpm"]
[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_menus_template/base/scripts/pause_menu_controller.gd" id="6_kthw8"]
[ext_resource type="AudioStream" uid="uid://bvsxxn2k42rju" path="res://sfx/vocal_samples/whisper_1.ogg" id="6_yumqv"]
[ext_resource type="Script" uid="uid://ckv1vnt3qim3w" path="res://Globals/prototype_tutorial.gd" id="7_xcdg0"]
[ext_resource type="PackedScene" uid="uid://cndau4qyl56kx" path="res://scenes/menus/overlaid_menus/pause_menu.tscn" id="7_yumqv"]
[ext_resource type="Script" uid="uid://ds4jqcfrmjpbj" path="res://Player/inventory.gd" id="8_kthw8"]
[ext_resource type="Script" uid="uid://07ul8a36b4e8" path="res://Globals/enemyhealth.gd" id="10_xguta"]
[ext_resource type="PackedScene" uid="uid://78q517wrknfe" path="res://player_health.tscn" id="11_h0fht"]
[ext_resource type="Script" uid="uid://dgjqgiw3yw42e" path="res://components/health_component.gd" id="12_h0fht"]

[sub_resource type="GDScript" id="4"]
script/source = "extends Control

# If using a typing sound as .wav file, remember to set it to loop and reimport

@onready var sfx_click: AudioStreamPlayer = $Dialog/SFXClick
func _ready():
	SignalBus.connect(\"npc_interacted\", _on_npc_interacted)
	# In case you forget to hide manually in the scene tree before saving
	$Dialog.hide()
	$Dialog/DialogBox.hide()
	$Dialog/MenuBox.hide()
	# You can use animations to handle this, and in that case the animation
	# RESET track can take care of this


func _on_npc_interacted(sheet_id):
	$MadTalk.start_dialog(sheet_id)
	
	
func _on_SheetID_text_entered(new_text):
	# Starting a dialog is as simplas as this:
	# just start_dialog( <sheet name> )
	$MadTalk.start_dialog(new_text)


func _input(event):
	# How the user tells the dialog to continue is up to you
	# it can be a key press, a mouse click, touch event, etc
	# All you have to do is call dialog_acknowledge() 
	if (
		(event is InputEventKey) and (event.pressed) and (not event.echo) and (event.keycode in [KEY_SPACE, KEY_ENTER, KEY_KP_ENTER, KEY_E])
	) or (
		(event is InputEventMouseButton) and (event.pressed) and (event.button_index == MOUSE_BUTTON_LEFT)
	):
		$MadTalk.dialog_acknowledge()

#func _on_ItemList_item_activated(index):
	#if index >= 0:
		#var sheet_id = sheet_list.get_item_text(index)
		#sheet_list.deselect_all()
		#
		#$MadTalk.start_dialog(sheet_id)


func _on_mad_talk_activate_custom_effect(custom_id: Variant, custom_data: Variant) -> void:
	SignalBus.emit_signal(\"custom_effect\", custom_id, custom_data)


func _on_mad_talk_dialog_finished(sheet_name: Variant, sequence_id: Variant) -> void:
	GamePiecesEventBus.emit_signal(\"move_disable\", true)
	SignalBus.emit_signal(\"dialogue_ended\")
	GamePiecesEventBus.emit_signal(\"camera_lock_requested\", false)
	Input.mouse_mode = Input.MOUSE_MODE_CAPTURED


func _on_mad_talk_dialog_started(sheet_name: Variant, sequence_id: Variant) -> void:
	SignalBus.emit_signal(\"dialogue_started\")
	GamePiecesEventBus.emit_signal(\"camera_lock_requested\", true)
	Input.mouse_mode = Input.MOUSE_MODE_VISIBLE
	GamePiecesEventBus.emit_signal(\"move_disable\", false)
"

[sub_resource type="Resource" id="Resource_6sbyu"]
metadata/__load_path__ = "res://button.tscn"

[sub_resource type="Gradient" id="Gradient_1ogho"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.35051546, 1)
colors = PackedColorArray(0, 0, 0, 0.7294118, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6sbyu"]
gradient = SubResource("Gradient_1ogho")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ffo63"]
texture = SubResource("GradientTexture2D_6sbyu")

[node name="CanvasLayer" type="CanvasLayer" unique_id=555252348]
process_mode = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="." unique_id=488180959]

[node name="PauseMenuController" type="Node" parent="." unique_id=1359465485]
script = ExtResource("6_kthw8")
pause_menu_packed = ExtResource("7_yumqv")

[node name="Scene" type="Control" parent="." unique_id=806033347]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = SubResource("4")

[node name="MadTalk" type="Node" parent="Scene" unique_id=407899283]
script = ExtResource("1_qttj8")
DialogMainControl = NodePath("../Dialog")
DialogMessageBox = NodePath("../Dialog/DialogBox")
DialogMessageLabel = NodePath("../Dialog/DialogBox/LabelMessage")
DialogSpeakerLabel = NodePath("../Dialog/DialogBox/LabelName")
DialogSpeakerAvatar = NodePath("../Dialog/DialogBox/Avatar")
DialogButtonsMenu = NodePath("../Dialog/MenuBox")
DialogButtonsContainer = NodePath("../Dialog/MenuBox/MenuContainer")
DialogButtonSceneFile = SubResource("Resource_6sbyu")
AnimatedTextMilisecondPerCharacter = 25.0
KeyPressAudioStreamPlayer = NodePath("../Dialog/SFXClick")

[node name="Dialog" type="Control" parent="Scene" unique_id=1285987606]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DialogBox" type="Panel" parent="Scene/Dialog" unique_id=509792803]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -209.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ffo63")

[node name="Avatar" type="TextureRect" parent="Scene/Dialog/DialogBox" unique_id=1618003319]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 144.0
texture = ExtResource("4_n4gff")
expand_mode = 1
stretch_mode = 6

[node name="LabelName" type="Label" parent="Scene/Dialog/DialogBox" unique_id=1475039580]
visible = false
layout_mode = 0
offset_left = 17.0
offset_top = 149.0
offset_right = 144.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 20
clip_text = true

[node name="LabelMessage" type="RichTextLabel" parent="Scene/Dialog/DialogBox" unique_id=1737689773]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 22.0
offset_right = -20.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("3_6sbyu")
theme_override_fonts/bold_font = ExtResource("3_6sbyu")
theme_override_fonts/bold_italics_font = ExtResource("3_6sbyu")
theme_override_fonts/italics_font = ExtResource("3_6sbyu")
theme_override_fonts/mono_font = ExtResource("3_6sbyu")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
horizontal_alignment = 1

[node name="MenuBox" type="Panel" parent="Scene/Dialog" unique_id=463842467]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = 192.0
offset_right = 219.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="Scene/Dialog/MenuBox" unique_id=2036687068]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFXClick" type="AudioStreamPlayer" parent="Scene/Dialog" unique_id=464333488]
stream = ExtResource("6_yumqv")
volume_db = -6.0
max_polyphony = 5
bus = &"SFX"

[node name="TabContainer" type="TabContainer" parent="Scene" unique_id=1348377023]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -375.5
offset_right = 640.0
offset_bottom = 375.5
grow_horizontal = 2
grow_vertical = 2
focus_behavior_recursive = 1
tab_alignment = 1
current_tab = 0
script = ExtResource("7_xcdg0")

[node name="Welcome" type="PanelContainer" parent="Scene/TabContainer" unique_id=482539227]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Scene/TabContainer/Welcome" unique_id=307110745]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Scene/TabContainer/Welcome/MarginContainer" unique_id=1030064587]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Scene/TabContainer/Welcome/MarginContainer/VBoxContainer" unique_id=787616865]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Welcome to HUSK! Thanks for playtesting this prototype![/center]

Controls: 

[color=red]WASD[/color] to move

[color=red]F[/color] to kick

[color=red]left click[/color] to attack with mainhand

[color=red]right click[/color] to attack with offhand/block

[color=red]tab[/color] for inventory

[color=red]esc[/color] for menu"

[node name="How to play" type="PanelContainer" parent="Scene/TabContainer" unique_id=226665432]
visible = false
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="Scene/TabContainer/How to play" unique_id=1185244352]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Scene/TabContainer/How to play/MarginContainer" unique_id=197903602]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Scene/TabContainer/How to play/MarginContainer/VBoxContainer" unique_id=1795219466]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "You have directional attacks that are controlled by [color=red]movement and your mouse[/color]

Walking forward or backwards will highlight your crosshair in the [color=red]up[/color] and [color=red]down[/color] directions

Moving your [color=red]mouse[/color] from [color=red]left to right[/color] will highlight the left and right icons on your crosshair.

Depending on which icon is highlighted when you press left click, you will attack differently.

Using these directional attacks are important to succeeding in combat as you can use different attacks to target enemies limbs, attacking a certain limb with a [color=red]bladed[/color] weapon enough will [color=red]dismember[/color] it.

You can press tab to see weapons and spells at your disposal."

[node name="Button" type="Button" parent="Scene/TabContainer/How to play/MarginContainer/VBoxContainer" unique_id=1736454391]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[node name="HUD" parent="." unique_id=1609284944 instance=ExtResource("5_svxpm")]

[node name="inventory" type="PanelContainer" parent="." unique_id=678313113]
visible = false
focus_behavior_recursive = 1
mouse_filter = 2
script = ExtResource("8_kthw8")

[node name="PanelContainer" type="PanelContainer" parent="inventory" unique_id=851313454]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="inventory/PanelContainer" unique_id=287964254]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="inventory/PanelContainer/ScrollContainer" unique_id=407990613]
layout_mode = 2
size_flags_horizontal = 3

[node name="enemyhealth" type="MarginContainer" parent="." unique_id=1446100428]
visible = false
custom_minimum_size = Vector2(100, 100)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_right = 2.0
offset_bottom = 27.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 40
script = ExtResource("10_xguta")

[node name="VBoxContainer" type="VBoxContainer" parent="enemyhealth" unique_id=2145979330]
layout_mode = 2

[node name="Label" type="Label" parent="enemyhealth/VBoxContainer" unique_id=321449224]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "test name"
horizontal_alignment = 1

[node name="playerHealth" parent="enemyhealth/VBoxContainer" unique_id=592960900 instance=ExtResource("11_h0fht")]
layout_mode = 2
max_value = 0.0
value = 0.0

[node name="HealthComponent" type="Node3D" parent="enemyhealth" unique_id=1827357247]
script = ExtResource("12_h0fht")
metadata/_custom_type_script = "uid://dgjqgiw3yw42e"

[connection signal="activate_custom_effect" from="Scene/MadTalk" to="Scene" method="_on_mad_talk_activate_custom_effect"]
[connection signal="dialog_aborted" from="Scene/MadTalk" to="Scene" method="_on_mad_talk_dialog_aborted"]
[connection signal="dialog_acknowledged" from="Scene/MadTalk" to="." method="_on_mad_talk_dialog_acknowledged"]
[connection signal="dialog_finished" from="Scene/MadTalk" to="Scene" method="_on_mad_talk_dialog_finished"]
[connection signal="dialog_started" from="Scene/MadTalk" to="Scene" method="_on_mad_talk_dialog_started"]
[connection signal="message_text_shown" from="Scene/MadTalk" to="." method="_on_mad_talk_message_text_shown"]
[connection signal="pressed" from="Scene/TabContainer/How to play/MarginContainer/VBoxContainer/Button" to="Scene/TabContainer" method="_on_button_pressed"]
[connection signal="health_changed" from="enemyhealth/HealthComponent" to="enemyhealth/VBoxContainer/playerHealth" method="_on_health_changed"]
[connection signal="max_health_changed" from="enemyhealth/HealthComponent" to="enemyhealth/VBoxContainer/playerHealth" method="_on_max_health_changed"]
